pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidFileUri4.pkl
res = import*("file:path/to/foo.pkl")
